k8s/backup-server/kube-prometheus/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 12.1.0
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: kube-prometheus
  template:
    metadata:
      annotations:
        checksum/grafana-config: 3bbd4dfc1c8e70921590d119bdedccb2
        checksum/grafana-dashboardproviders: 4c364bf7811a4eff194596a272550ae5
        checksum/grafana-datasources: 34dc6d0eeebe415ac38992ae3518ab8e
      labels:
        app.kubernetes.io/component: grafana
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 12.1.0
    spec:
      automountServiceAccountToken: false
      containers:
      - env: []
        image: grafana/grafana:12.1.0
        name: grafana
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 6m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
          readOnly: false
        - mountPath: /etc/grafana/provisioning/datasources
          name: grafana-datasources
          readOnly: false
        - mountPath: /etc/grafana/provisioning/dashboards
          name: grafana-dashboards
          readOnly: false
        - mountPath: /tmp
          name: tmp-plugins
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/alertmanager-overview
          name: grafana-dashboard-alertmanager-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/apiserver
          name: grafana-dashboard-apiserver
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-ceph-cluster-advanced
          name: grafana-dashboard-ceph-ceph-cluster-advanced
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-ceph-nvmeof-performance
          name: grafana-dashboard-ceph-ceph-nvmeof-performance
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-ceph-nvmeof
          name: grafana-dashboard-ceph-ceph-nvmeof
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-cephfs-overview
          name: grafana-dashboard-ceph-cephfs-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-cephfsdashboard
          name: grafana-dashboard-ceph-cephfsdashboard
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-host-details
          name: grafana-dashboard-ceph-host-details
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-hosts-overview
          name: grafana-dashboard-ceph-hosts-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-multi-cluster-overview
          name: grafana-dashboard-ceph-multi-cluster-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-osd-device-details
          name: grafana-dashboard-ceph-osd-device-details
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-osds-overview
          name: grafana-dashboard-ceph-osds-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-pool-detail
          name: grafana-dashboard-ceph-pool-detail
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-pool-overview
          name: grafana-dashboard-ceph-pool-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-radosgw-detail
          name: grafana-dashboard-ceph-radosgw-detail
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-radosgw-overview
          name: grafana-dashboard-ceph-radosgw-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-radosgw-sync-overview
          name: grafana-dashboard-ceph-radosgw-sync-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-rbd-details
          name: grafana-dashboard-ceph-rbd-details
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-rbd-overview
          name: grafana-dashboard-ceph-rbd-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-rgw-s3-analytics
          name: grafana-dashboard-ceph-rgw-s3-analytics
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/ceph-smb-overview
          name: grafana-dashboard-ceph-smb-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/cluster-total
          name: grafana-dashboard-cluster-total
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/controller-manager
          name: grafana-dashboard-controller-manager
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/grafana-overview
          name: grafana-dashboard-grafana-overview
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-cluster
          name: grafana-dashboard-k8s-resources-cluster
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-multicluster
          name: grafana-dashboard-k8s-resources-multicluster
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-namespace
          name: grafana-dashboard-k8s-resources-namespace
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-node
          name: grafana-dashboard-k8s-resources-node
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-pod
          name: grafana-dashboard-k8s-resources-pod
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-windows-cluster
          name: grafana-dashboard-k8s-resources-windows-cluster
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-windows-namespace
          name: grafana-dashboard-k8s-resources-windows-namespace
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-windows-pod
          name: grafana-dashboard-k8s-resources-windows-pod
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workload
          name: grafana-dashboard-k8s-resources-workload
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-resources-workloads-namespace
          name: grafana-dashboard-k8s-resources-workloads-namespace
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-windows-cluster-rsrc-use
          name: grafana-dashboard-k8s-windows-cluster-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/k8s-windows-node-rsrc-use
          name: grafana-dashboard-k8s-windows-node-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/kubelet
          name: grafana-dashboard-kubelet
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/namespace-by-pod
          name: grafana-dashboard-namespace-by-pod
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/namespace-by-workload
          name: grafana-dashboard-namespace-by-workload
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/node-cluster-rsrc-use
          name: grafana-dashboard-node-cluster-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/node-rsrc-use
          name: grafana-dashboard-node-rsrc-use
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes-aix
          name: grafana-dashboard-nodes-aix
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes-darwin
          name: grafana-dashboard-nodes-darwin
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/nodes
          name: grafana-dashboard-nodes
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/persistentvolumesusage
          name: grafana-dashboard-persistentvolumesusage
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/pod-total
          name: grafana-dashboard-pod-total
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/prometheus-remote-write
          name: grafana-dashboard-prometheus-remote-write
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/prometheus
          name: grafana-dashboard-prometheus
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/proxy
          name: grafana-dashboard-proxy
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/scheduler
          name: grafana-dashboard-scheduler
          readOnly: false
        - mountPath: /grafana-dashboard-definitions/0/workload-total
          name: grafana-dashboard-workload-total
          readOnly: false
        - mountPath: /etc/grafana
          name: grafana-config
          readOnly: false
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: grafana
      volumes:
      - emptyDir: {}
        name: grafana-storage
      - name: grafana-datasources
        secret:
          secretName: grafana-datasources
      - configMap:
          name: grafana-dashboards
        name: grafana-dashboards
      - emptyDir:
          medium: Memory
        name: tmp-plugins
      - configMap:
          name: grafana-dashboard-alertmanager-overview
        name: grafana-dashboard-alertmanager-overview
      - configMap:
          name: grafana-dashboard-apiserver
        name: grafana-dashboard-apiserver
      - configMap:
          name: grafana-dashboard-ceph-ceph-cluster-advanced
        name: grafana-dashboard-ceph-ceph-cluster-advanced
      - configMap:
          name: grafana-dashboard-ceph-ceph-nvmeof-performance
        name: grafana-dashboard-ceph-ceph-nvmeof-performance
      - configMap:
          name: grafana-dashboard-ceph-ceph-nvmeof
        name: grafana-dashboard-ceph-ceph-nvmeof
      - configMap:
          name: grafana-dashboard-ceph-cephfs-overview
        name: grafana-dashboard-ceph-cephfs-overview
      - configMap:
          name: grafana-dashboard-ceph-cephfsdashboard
        name: grafana-dashboard-ceph-cephfsdashboard
      - configMap:
          name: grafana-dashboard-ceph-host-details
        name: grafana-dashboard-ceph-host-details
      - configMap:
          name: grafana-dashboard-ceph-hosts-overview
        name: grafana-dashboard-ceph-hosts-overview
      - configMap:
          name: grafana-dashboard-ceph-multi-cluster-overview
        name: grafana-dashboard-ceph-multi-cluster-overview
      - configMap:
          name: grafana-dashboard-ceph-osd-device-details
        name: grafana-dashboard-ceph-osd-device-details
      - configMap:
          name: grafana-dashboard-ceph-osds-overview
        name: grafana-dashboard-ceph-osds-overview
      - configMap:
          name: grafana-dashboard-ceph-pool-detail
        name: grafana-dashboard-ceph-pool-detail
      - configMap:
          name: grafana-dashboard-ceph-pool-overview
        name: grafana-dashboard-ceph-pool-overview
      - configMap:
          name: grafana-dashboard-ceph-radosgw-detail
        name: grafana-dashboard-ceph-radosgw-detail
      - configMap:
          name: grafana-dashboard-ceph-radosgw-overview
        name: grafana-dashboard-ceph-radosgw-overview
      - configMap:
          name: grafana-dashboard-ceph-radosgw-sync-overview
        name: grafana-dashboard-ceph-radosgw-sync-overview
      - configMap:
          name: grafana-dashboard-ceph-rbd-details
        name: grafana-dashboard-ceph-rbd-details
      - configMap:
          name: grafana-dashboard-ceph-rbd-overview
        name: grafana-dashboard-ceph-rbd-overview
      - configMap:
          name: grafana-dashboard-ceph-rgw-s3-analytics
        name: grafana-dashboard-ceph-rgw-s3-analytics
      - configMap:
          name: grafana-dashboard-ceph-smb-overview
        name: grafana-dashboard-ceph-smb-overview
      - configMap:
          name: grafana-dashboard-cluster-total
        name: grafana-dashboard-cluster-total
      - configMap:
          name: grafana-dashboard-controller-manager
        name: grafana-dashboard-controller-manager
      - configMap:
          name: grafana-dashboard-grafana-overview
        name: grafana-dashboard-grafana-overview
      - configMap:
          name: grafana-dashboard-k8s-resources-cluster
        name: grafana-dashboard-k8s-resources-cluster
      - configMap:
          name: grafana-dashboard-k8s-resources-multicluster
        name: grafana-dashboard-k8s-resources-multicluster
      - configMap:
          name: grafana-dashboard-k8s-resources-namespace
        name: grafana-dashboard-k8s-resources-namespace
      - configMap:
          name: grafana-dashboard-k8s-resources-node
        name: grafana-dashboard-k8s-resources-node
      - configMap:
          name: grafana-dashboard-k8s-resources-pod
        name: grafana-dashboard-k8s-resources-pod
      - configMap:
          name: grafana-dashboard-k8s-resources-windows-cluster
        name: grafana-dashboard-k8s-resources-windows-cluster
      - configMap:
          name: grafana-dashboard-k8s-resources-windows-namespace
        name: grafana-dashboard-k8s-resources-windows-namespace
      - configMap:
          name: grafana-dashboard-k8s-resources-windows-pod
        name: grafana-dashboard-k8s-resources-windows-pod
      - configMap:
          name: grafana-dashboard-k8s-resources-workload
        name: grafana-dashboard-k8s-resources-workload
      - configMap:
          name: grafana-dashboard-k8s-resources-workloads-namespace
        name: grafana-dashboard-k8s-resources-workloads-namespace
      - configMap:
          name: grafana-dashboard-k8s-windows-cluster-rsrc-use
        name: grafana-dashboard-k8s-windows-cluster-rsrc-use
      - configMap:
          name: grafana-dashboard-k8s-windows-node-rsrc-use
        name: grafana-dashboard-k8s-windows-node-rsrc-use
      - configMap:
          name: grafana-dashboard-kubelet
        name: grafana-dashboard-kubelet
      - configMap:
          name: grafana-dashboard-namespace-by-pod
        name: grafana-dashboard-namespace-by-pod
      - configMap:
          name: grafana-dashboard-namespace-by-workload
        name: grafana-dashboard-namespace-by-workload
      - configMap:
          name: grafana-dashboard-node-cluster-rsrc-use
        name: grafana-dashboard-node-cluster-rsrc-use
      - configMap:
          name: grafana-dashboard-node-rsrc-use
        name: grafana-dashboard-node-rsrc-use
      - configMap:
          name: grafana-dashboard-nodes-aix
        name: grafana-dashboard-nodes-aix
      - configMap:
          name: grafana-dashboard-nodes-darwin
        name: grafana-dashboard-nodes-darwin
      - configMap:
          name: grafana-dashboard-nodes
        name: grafana-dashboard-nodes
      - configMap:
          name: grafana-dashboard-persistentvolumesusage
        name: grafana-dashboard-persistentvolumesusage
      - configMap:
          name: grafana-dashboard-pod-total
        name: grafana-dashboard-pod-total
      - configMap:
          name: grafana-dashboard-prometheus-remote-write
        name: grafana-dashboard-prometheus-remote-write
      - configMap:
          name: grafana-dashboard-prometheus
        name: grafana-dashboard-prometheus
      - configMap:
          name: grafana-dashboard-proxy
        name: grafana-dashboard-proxy
      - configMap:
          name: grafana-dashboard-scheduler
        name: grafana-dashboard-scheduler
      - configMap:
          name: grafana-dashboard-workload-total
        name: grafana-dashboard-workload-total
      - name: grafana-config
        secret:
          secretName: grafana-config
